test_samples/invalid/missing_min.zarr/labels/coins/3/.zarray
{
    "chunks": [
        203,
        284
    ],
    "compressor": {
        "blocksize": 0,
        "clevel": 5,
        "cname": "lz4",
        "id": "blosc",
        "shuffle": 1
    },
    "dimension_separator": "/",
    "dtype": "<i4",
    "fill_value": 0,
    "filters": null,
    "order": "C",
    "shape": [
        203,
        284
    ],
    "zarr_format": 2
}